syntax = "proto3";
package pb;
option go_package = "./";

message KeyPair{
	bytes signKey = 1;
	bytes verfKey = 2;
}
